fix: caps-lock + shift

--- a/src/scss/_keyboard.scss
+++ b/src/scss/_keyboard.scss
@@ -107,6 +107,9 @@
     .upperCase {
       text-transform: uppercase;
     }
+    .lowerCase {
+      text-transform: lowercase;
+    }
     .focused {
       background: $key-press;
     }
